--- a/styles.css
+++ b/styles.css
@@ -23,23 +23,19 @@ body {
 	position: absolute;
 	opacity: 0.3;
 	filter: alpha(opacity=30);
+	-webkit-transition: all 0.1s ease-in-out;
+	-moz-transition: all 0.1s ease-in-out;
+	-o-transition: all 0.1s ease-in-out;
+	transition: all 0.1s ease-in-out;
 }
 
 #floatMenu:hover {
 	opacity: 0.7;
 	filter: alpha(opacity=70);
-
-}
-
-[draggable=true] {
-    cursor: move;
-}
-
-.resizable {
-    overflow: scroll;
-    resize: both;
-    max-width: 300px;
-    max-height: 460px;
+	-webkit-transition: all 0.1s ease-in-out;
+	-moz-transition: all 0.1s ease-in-out;
+	-o-transition: all 0.1s ease-in-out;
+	transition: all 0.1s ease-in-out;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -72,6 +68,12 @@ button {
 	margin: 0 auto;
 	font-size: 16px;
 	text-align: center;
+	outline: none;
+}
+
+button:active {
+	color: black;
+	background-color:white;
 }
 
 #copyright {
